other/restrict-jobs/.kyverno-test/resource.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob
spec:
  template:
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
        command: ["sleep", "3600"]
      restartPolicy: Never
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob
  ownerReferences:
  - apiVersion: batch/v1
    blockOwnerDeletion: true
    controller: true
    kind: CronJob
    name: goodcronjob01
    uid: a554d6b8-8b0a-44da-a9d9-d76a1f85b320
spec:
  template:
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
        command: ["sleep", "3600"]
      restartPolicy: Never
